--- a/3-reviews/setup/index.html
+++ b/3-reviews/setup/index.html
@@ -14,7 +14,33 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>review project</h1>
+    <main>
+      <section class="conatiner">
+        <div class="title">
+          <h2>our reviews</h2>
+          <div class="underline"></div>
+        </div>
+        <article class="review">
+          <div class="img-container">
+            <img src="person-1.jpeg" alt="" id="person-img">
+          </div>
+          <h4 id="author">Sara Jones</h4>
+          <p id="job">ux designer</p>
+          <p id="info">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, pariatur eveniet? At cupiditate eaque fugit nemo numquam repudiandae, illum rerum ducimus esse dolores quae? At.
+          </p>
+          <div class="button-container">
+            <button class="prev-btn">
+              <i class="fas fa-chevron-left"></i>
+            </button>
+            <button class="next-btn">
+              <i class="fas fa-chevron-right"></i>
+            </button>
+          </div>
+          <button class="random-btn">surprise me</button>
+        </article>
+      </section>
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
